--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "browserify-middleware": "^5.0.2",
     "express": "^4.12.4",
+    "heroku": "^0.1.2",
     "mithril": "^0.2.0"
   },
   "devDependencies": {
